Added goedkeuren en refactored magazijn service
